fix some broken css classes

--- a/src/style.css
+++ b/src/style.css
@@ -15,26 +15,26 @@ html,
   padding: 0rem;
 }
 .p-1 {
-  padding: 1rem;
+  padding: 0.25rem;
 }
 .p-2 {
-  padding: 2rem;
+  padding: 0.5rem;
 }
 .p-3 {
-  padding: 3rem;
+  padding: 1rem;
 }
 
 .m-0 {
   padding: 0rem;
 }
 .m-1 {
-  padding: 1rem;
+  padding: 0.25rem;
 }
 .m-2 {
-  padding: 2rem;
+  padding: 0.5rem;
 }
 .m-3 {
-  padding: 3rem;
+  padding: 1rem;
 }
 
 .border {
